/*
 * $Id: ChangeLog,v 1.5793 2007/11/29 19:23:23 vouchcac Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-12-02 05.15 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * source/ct/token1.c
  * source/ct/pos1.c
    ! do not directly access hb_cdp_page

  * contrib/libnf/tempfile.prg
    ! use native xHarbour routine to create temp file, thus eliminate
      dependence on NTOC() of CT.LIB

  * include/hbapigt.h
  * source/rtl/inkey.c
  * source/rtl/gtnul/gtnul.c
    ! exporting hb_inkey, hb_gt_SetAttribute, hb_gt_info

  * include/hbmath.h
  * source/rtl/math.c
    ! exporting hb_mathResetError, hb_mathIsMathErr and hb_mathGetLastError

2007-11-29 11:21 UTC+0800 Pritpal Bedi <pritpal@vouchcac.com>
  * contrib/wvtgui/wvtutils.c
    ! Fixed a type in HB_FUNC( WVT__GETSAVEFILENAME ).

2007-11-29 18.15 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * include/clipdefs.h
    ! BCC and OpenWatcom also do not want WORD/WORDP/PWORD redefined here.

  * include/hbvmpub.h
    ! define NDEBUG if not yet defined

2007-11-29 14.30 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * source/rtl/regex.c
    ! fix memory leaks on function hb_regex()

  * source/rtl/direct.c
    ! add 2 "funny" dummy lines for __DMC__ because without these lines __DMC__
      will GPF running tests/dirtest4.prg (DMC 8.50.4 was in use)
      NOTE: This is really not funny but the fact is it. These lines will be
      	    deleted when next version of __DMC__ can survive without it.
            BCC/MSVC/GCC/WC/XCC/POCC are OK, so my conclusion is, it is DMC bug.
    % minor formatting

2007-11-28 06.20 UTC+0700 Andi Jahja <harbour/AT/cbn/net/id>
  * source/rtl/pcre/config.h
  * source/rtl/pcre/config.h.generic
  * source/rtl/pcre/pcre.h
  * source/rtl/pcre/pcre.h.generic
  * source/rtl/pcre/pcreposix.c
  * source/rtl/pcre/pcreposix.h